cshadaks_Lab8/iptables/iptables2.txt
# Generated by iptables-save v1.8.4 on Tue Dec  5 01:32:34 2023
*filter
:INPUT ACCEPT [44:3092]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [25:4016]
-A INPUT -p icmp -j DROP
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p udp -j DROP
-A OUTPUT -p icmp -j DROP
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -j DROP
-A OUTPUT -d 129.79.123.143/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 129.79.123.143/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j DROP
-A OUTPUT -p tcp -m tcp --dport 443 -j DROP
COMMIT
# Completed on Tue Dec  5 01:32:34 2023
