cshadaks_Lab8/iptables/iptables3.txt
# Generated by iptables-save v1.8.4 on Tue Dec  5 01:33:47 2023
*filter
:INPUT ACCEPT [35:2448]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20:3424]
-A INPUT -p icmp -j DROP
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p udp -j DROP
-A INPUT -s 192.168.122.188/32 -p tcp -m tcp --sport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 80 -j DROP
-A OUTPUT -p icmp -j DROP
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -j DROP
-A OUTPUT -d 129.79.123.143/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 129.79.123.143/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j DROP
-A OUTPUT -p tcp -m tcp --dport 443 -j DROP
COMMIT
# Completed on Tue Dec  5 01:33:47 2023
